@@ -1,4 +1,4 @@
-CHANGES.txt - 2.0.2 - 2015-01-27
+CHANGES.txt - 2.0.2 - 2015-01-28
 --------------------------------
 
 CHANGES IN CUPS V2.0.2
@@ -22,6 +22,8 @@ CHANGES IN CUPS V2.0.2
 	- The --without-xinetd configure option did not work (STR #4542)
 	- Backends needing to load OS X kernel extensions did not work
 	  (<rdar://problem/19015679>)
+	- Mapping of PPD keywords to IPP keywords did not work if the PPD
+	  keyword was already an IPP keyword (<rdar://problem/19121005>)
 
 
 CHANGES IN CUPS V2.0.1
